--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: simple_ui_kw
-description: "A new Flutter package project."
-version: 0.0.1
-homepage:
+description: "we custom animation button, video splash screen"
+version: 1.0.0
+homepage: https://github.com/jspark9703/simple_ui_kw
 
 environment:
   sdk: '>=3.2.6 <4.0.0'
@@ -10,6 +10,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  video_player: ^2.8.2
 
 dev_dependencies:
   flutter_test:
@@ -23,10 +24,8 @@ dev_dependencies:
 flutter:
 
   # To add assets to your package, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-  #
+  assets:
+    - assets/background.mp4
   # For details regarding assets in packages, see
   # https://flutter.dev/assets-and-images/#from-packages
   #
